# regex_transformer

./: .gitignore  dfa_generator.py  main.py  parity_experiment.py  pyproject.toml  requirements.txt
rubiks_experiment/: color_query_experiment.py  color_query_probe_training.py  cosine_similarity.py  data_generation.py  fake_experiment.py  model_training.py  patching.py  probe_training.py  probe_training_nonlinear.py  quick_train_big_uniform.py  rubiks_datasets.py  rubiks_generator.py  test_model_training.py  test_rubiks_dataset.py  training.py
rubiks_experiment/tokenizers/: added_tokens.json  tokenizer_config.json
